# regdbtool

./: .gitignore  Cargo.toml
src/: firmware.rs  main.rs  signing.rs
