[package]
name = "regdbtool"
version = "0.1.0"
authors = ["Finn Behrens <me@kloenk.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "sign", "completion" ]

sign = [ "wireless-regdb/sign", "openssl", "dialoguer" ]
completion = []


[dependencies]
wireless-regdb = { git = "https://github.com/kloenk/wireless-regdb", branch = "sign" }

anyhow = "1"

clap = { version = "2.33.0", features = [ "color" ] }
log = { version = "0.4", features = [ "max_level_trace", "release_max_level_info" ]}
pretty_env_logger = "0.4"

openssl = { version = "0.10", optional = true }
dialoguer = { version = "0.8", optional = true }
